{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 95,
  "lineage": "59e96b2b-e592-cab6-3dc9-4df8ad765543",
  "resources": [
    {
      "module": "module.app",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0f357d1ab1ae30af1"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0f357d1ab1ae30af1"
                ]
              }
            ],
            "id": "igw-0a293f5a0bb452c18",
            "internet_gateway_id": "igw-0a293f5a0bb452c18",
            "owner_id": "135928476890",
            "tags": {
              "Name": "james-murphy-eng53-internet-gate"
            }
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6b9f7403b6f5fcc",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0d2a09f05f16c6ac0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2a09f05f16c6ac0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-04e650c46bed4814f",
            "private_dns": "ip-10-1-10-122.eu-west-1.compute.internal",
            "private_ip": "10.1.10.122",
            "public_ip": "34.243.180.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ee3b49f84d0c7ec3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1c36f08373b4548",
            "tags": {
              "Name": "james-murphy-eng53-nodejs-ami-master-initial"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c786f892e64388de"
            ]
          },
          "dependencies": [
            "aws_instance.db_instance",
            "aws_security_group.db_sg",
            "aws_subnet.db_subnet",
            "module.app.aws_security_group.app_sg",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bcc004919e51e6",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0427c238217d048d6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0427c238217d048d6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-02e266a71bdea3ffa",
            "private_dns": "ip-10-1-20-152.eu-west-1.compute.internal",
            "private_ip": "10.1.20.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ca1c25ab92aed7c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ae8c299a3cbae21",
            "tags": {
              "Name": "james-murphy-eng53-mongodb-ami-v2-mongo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e68154e8d7b5c604"
            ]
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-01889c0922ac3f1be",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0b1c36f08373b4548"
            ],
            "tags": {
              "Name": "james-murphy-eng53-nacl-app"
            },
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          },
          "dependencies": [
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.1.10.0/24",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-0dd553bb0c4e77b18",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.1.10.0/24",
                "from_port": 27017,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-07ae8c299a3cbae21"
            ],
            "tags": {
              "Name": "james-murphy-eng53-nacl-app"
            },
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          },
          "dependencies": [
            "aws_subnet.db_subnet",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01287ea703eff4f22",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "james-murphy-eng53-private-rt"
            },
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f5dce9082676e3d",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a293f5a0bb452c18",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "james-murphy-eng53-public-rt"
            },
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb933f4cae2612ed",
            "route_table_id": "rtb-09f5dce9082676e3d",
            "subnet_id": "subnet-0b1c36f08373b4548"
          },
          "dependencies": [
            "module.app.aws_route_table.public-rt",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05377de5bc917333e",
            "route_table_id": "rtb-01287ea703eff4f22",
            "subnet_id": "subnet-07ae8c299a3cbae21"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0c786f892e64388de",
            "description": "nodejs security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c786f892e64388de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.20.0/24"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "james-murphy-eng53-nodejs-ami-master-initial",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "james-murphy-eng53-nodejs-sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0e68154e8d7b5c604",
            "description": "database security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e68154e8d7b5c604",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c786f892e64388de"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "james-murphy-eng53-mongodb-ami-v2-mongo",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "james-murphy-eng53-db-sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          },
          "dependencies": [
            "module.app.aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b1c36f08373b4548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.10.0/24",
            "id": "subnet-0b1c36f08373b4548",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "james-murphy-eng53-subnet-nodejs"
            },
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-07ae8c299a3cbae21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.20.0/24",
            "id": "subnet-07ae8c299a3cbae21",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "james-murphy-eng53-subnet-mongodb"
            },
            "vpc_id": "vpc-0f357d1ab1ae30af1"
          }
        }
      ]
    }
  ]
}